<resources>
    <string name="app_name">MIVBProject</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="btn_weergave_str">weergeven op kaart</string>
    <string name="tv_digital_timetable_str">Digital Timetable:</string>
    <string name="btn_select_language_str">Selecteer taal</string>
    <string name="btn_reset_str">Reset</string>
    <string name="btn_info_str">Info</string>
    <string name="btn_fixed_adress_str">Vast bestemmingsadres</string>
    <string name="btn_zoeken_str">Zoeken</string>
    <string name="tv_datum_uur_str">Datum en Uur van vertrek</string>
    <string name="tv_bestemming_str">Bestemming</string>
    <string name="tv_vertrek_str">Vertrek</string>
</resources>
