<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:text="@string/btn_select_language_str"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_select_language"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:textAlignment="viewStart" />

    <Button
        android:text="@string/btn_fixed_adress_str"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_fixed_adress"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:textAlignment="viewStart"
        android:backgroundTint="@android:color/holo_blue_bright" />

    <Button
        android:text="@string/btn_info_str"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_info"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:textAlignment="viewStart" />

    <Button
        android:text="@string/btn_reset_str"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_reset"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:textAlignment="viewStart"
        android:backgroundTint="@android:color/holo_blue_bright" />
</LinearLayout>