<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="be.ehb.mivbproject.activities.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_vertrek"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="18sp"
        android:text="@string/tv_vertrek_str" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_bestemming"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="18sp"
        android:layout_below="@+id/et_vertrek"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/tv_bestemming_str" />

    <AutoCompleteTextView
        android:id="@+id/et_vertrek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_vertrek"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:ems="10"
        android:hint="Vertrek"
        android:dropDownHeight="300dp"/>

    <AutoCompleteTextView
        android:id="@+id/et_bestemming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_vertrek"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/et_vertrek"
        android:layout_below="@+id/tv_bestemming"
        android:ems="10"
        android:hint="Aankomst"
        android:inputType="textAutoComplete|textPersonName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_datum_uur"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="18sp"
        android:layout_below="@+id/et_bestemming"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/tv_datum_uur_str" />

    <Button
        android:layout_width="125dp"
        android:inputType="date"
        android:ems="10"
        android:layout_below="@+id/tv_datum_uur"
        android:layout_alignLeft="@+id/et_bestemming"
        android:layout_alignStart="@+id/et_bestemming"
        android:id="@+id/btn_datum"
        android:hint="Vandaag"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/btn_uur"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/btn_datum"
        android:layout_alignBottom="@+id/btn_datum"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_toEndOf="@+id/btn_datum"
        android:layout_toRightOf="@+id/btn_datum"
        android:ems="10"
        android:hint="=(hour)"
        android:inputType="time" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_zoeken"
        android:text="@string/btn_zoeken_str"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
        android:textSize="24sp" />

</RelativeLayout>
